git commit FirstSecurity